# nova-reader

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.en.md  README.ja.md  README.ko.md  README.md  docker-compose.prod.yml  docker-compose.yml
.github/: pull_request_template.md
.sqlx/: query-006dd0d1d5dc9b065c887d6f73fa7bdfb0179f5fcd00f0db9518198b9003d9ed.json  query-01a6f46d7eb3264f67cab8c47cd113bf955af2479ce3dbcb2a665a55c616ada5.json  query-0235a90478779574322c996ba8377c2b7e5f741cc32daab5888dadf77b79e940.json  query-0440a08267f0e38ab7d011569ebf3d6dc77c7ac29b1b5db802a2de5c7a2951cf.json  query-0520c4f0fac018a78e62f1eaf66b569411a8e1c5ee2237ddb6d6f1d594afe648.json  query-05418b03a49a15424486d7d29c25dbf3be425e0b790a39c116a45ddf5e3a3360.json  query-055f1980f35aedcbe9790fca2d256a34c7b05acf78a601e3769d2db6d3461061.json  query-08f1a8063c3da07a15502aadc3fed343bb9c8a0ee3af15a6d1572667f34cabfb.json  query-0b3cdef4aa95d6419250672702cf95738e1def2ea2222171f473b8d107c1f483.json  query-0c07973d8c118bdc7952e830fe265aa5ba930d9ebdd211f4b61a9119e667bd56.json  query-0c846626817d363559fa5cdc6c4876f5922244ca941d133cab3e79be09262474.json  query-0f6add421418548762c2b2d320cb1757346ec9553fe0d99965f5a4821d2bf7dc.json  query-1182de5e9c723520672cf6725196aa04f568c52ec9c0efed0a5defc12ca125d1.json  query-146290134e0abdae24ce40dc3957160640ac751533bc1eda9127b185dda8edc7.json  query-1768288d292b36b21b5546a34c5674bc64ec8c85489112b9fd06429c090b8624.json  query-17970f5edfeebff732879f7ab6dd3f772c821dd38cecc01c59ffce9b9d25f6a7.json  query-17b6e7a6eeb24c589df626b92fc8811a32b48ffa72af8f18693e3f91c575d025.json  query-1831ae447db603e20e952032a573b2ce6447437d4aed074ba6304cb4366d15c5.json  query-1840199c99eec57e23c13879f0ef08f9df8d6eedd04529a86394fd184b5e79dd.json  query-184b6150b27186df837e561d1b5d559d34df7c2f009c9a9976b7304a95df65d9.json  query-191372955c26d21b0a42170a17a8fdb2d965fd6331dbb0b7ef935d990a03383f.json  query-1a3214d068523cb13dbb6212abf54c37afbe8efc8164b209decfea413b5081b5.json  query-1ba7177cca235fafb33ba9eff151f3ab4512b85356e599e3a21d704902609982.json  query-20e1f3c4a0dfd3544efaf93b68a9acb88b72d10f47a77fd5176c0ec01669adf0.json  query-2165084117a037966f867865fdc88bd934d501daff796142045b5f0f3dac8e4d.json  query-221e4d4d94e158186cbcd19dcc570b9a894fae17a0c06d452c7fbe39fed3d141.json  query-22d0859054c4381c3b3d0f7ad2624373ace003fdc4d4de0527f8a354419aeee0.json  query-256b4d9ad94084fb012d333b15437973cae6b9e5ee34bf3fdf3ecd091d541d79.json  query-25b04aa9ad91c6c6fe2a0a1b4a4280f2753c8bdcb683a4e3ddd9e478a92660ff.json  query-25b0e24f701b732195b9ca9400ce7c9620939c0d94220a69f1725972fb1d7046.json  query-26e1bc1c180a1e474351d6fa040c6a9dfbe5498440ee4d78cf2f80f90c6386ee.json  query-294aba9922e7b3fa7a47576ac26705dfc24c456a9af4ab1d7715a234ec77d8d7.json  query-29cddf044bf1d88ace5a490cbca5e310a045f8307ed63b7254b41fc9c359a7d3.json  query-2a35a4b19c82da1d1c7678f678c2cafebbb1473e9bdd900cea1a5486e2045d75.json  query-2a4741c22ca6bc411767e83d2bb36b469bbe2e7b31436b5248987caf4fd29022.json  query-2abea8337d5f183613763b88090791f1aa1b06cf375aef7d31a7e76fc42c5132.json  query-2b7bd26fc320a1f6f05f2d9b480bd4c36f7b85cd5c146dc5982a2903200adaef.json  (+136 more)
crates/nova-api/: CLAUDE.md  Cargo.toml  README.md
crates/nova-api/src/: access.rs  ai_service.rs  ai_usage.rs  config.rs  error.rs  extractors.rs  feature_flags.rs  main.rs  middleware.rs  migrations.rs  prompts.rs  response.rs  state.rs  task_queue.rs  task_worker.rs  tests.rs
crates/nova-api/src/auth/: jwt.rs  middleware.rs  mod.rs
crates/nova-api/src/dedup/: diff.rs  mod.rs  resolution.rs  scan.rs
crates/nova-api/src/repo/: mod.rs  pg_book.rs  pg_chapter.rs  pg_duplicate.rs  pg_duplicate_resolution.rs  pg_duplicate_scan.rs  pg_exact_file_discovery.rs  pg_library.rs  pg_person.rs  pg_reading.rs  pg_series.rs  pg_stats.rs  pg_user.rs
crates/nova-api/src/routes/: admin.rs  ai.rs  ai_stubs.rs  ai_usage.rs  analysis.rs  annotations.rs  auth.rs  books.rs  calibre.rs  chapters.rs  collections.rs  duplicates.rs  entities.rs  entity_profiles.rs  glossary.rs  glossary_translate.rs  health.rs  import_sources.rs  libraries.rs  metrics.rs  mod.rs  notifications.rs  opds.rs  persons.rs  plugins.rs  progress.rs  recommendations.rs  search.rs  semantic_tags.rs  settings.rs  shelves.rs  social.rs  stats.rs  tasks.rs  translate.rs  trope_ontology.rs  webhooks.rs  ws.rs
crates/nova-api/tests/: dedup_e2e.rs  integration.rs
crates/nova-core/: CLAUDE.md  Cargo.toml  README.md
crates/nova-core/src/: error.rs  id.rs  lib.rs  tests.rs
crates/nova-core/src/domain/: book.rs  chapter.rs  dedup.rs  dedup_discovery.rs  entity.rs  library.rs  mod.rs  person.rs  reading.rs  search.rs  series.rs  stats.rs  task.rs  user.rs
crates/nova-core/src/repo/: book_repo.rs  chapter_repo.rs  entity_repo.rs  library_repo.rs  mod.rs  person_repo.rs  reading_repo.rs  series_repo.rs  stats_repo.rs  user_repo.rs
crates/nova-embed/: CLAUDE.md  Cargo.toml  README.md
crates/nova-embed/src/: chunker.rs  chunker_v2.rs  client.rs  dedup.rs  lib.rs  tests.rs
crates/nova-graph/: CLAUDE.md  Cargo.toml  README.md
crates/nova-graph/src/: agentic.rs  community.rs  entity.rs  leiden.rs  lib.rs  neo4j.rs  sync.rs  tests.rs
crates/nova-ingest/: CLAUDE.md  Cargo.toml  README.md
crates/nova-ingest/examples/: dedup_bench.rs  dedup_eval.rs
crates/nova-ingest/src/: chapter_splitter.rs  cleaner.rs  cover.rs  dedup.rs  dedup_benchmark.rs  dedup_evaluation.rs  error.rs  hasher.rs  lib.rs  parser.rs  scanner.rs  tests.rs  watch_service.rs  watcher.rs
crates/nova-ingest/tests/: dedup_evaluation.rs  dedup_public.rs
crates/nova-search/: CLAUDE.md  Cargo.toml  README.md
crates/nova-search/src/: embedding.rs  hybrid.rs  lib.rs  meilisearch.rs  qdrant.rs  rrf.rs
crates/nova-translate/: CLAUDE.md  Cargo.toml  README.md
crates/nova-translate/src/: engine.rs  glossary.rs  lib.rs  tests.rs
crates/nova-worker/: CLAUDE.md  Cargo.toml  README.md
crates/nova-worker/src/: handler.rs  handlers.rs  lib.rs  queue.rs  scheduler.rs  tests.rs
migrations/: 20260525000023_task_dag.sql  (+61 more)
(+188 files in other folders)
