[package]
name = "nova-core"
description = "Core domain models and shared types for Nova Reader"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
hex = "0.4"
