[package]
name = "nova-embed"
description = "Embedding generation and vector operations for Nova Reader"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nova-core = { path = "../nova-core" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
unicode-segmentation = { workspace = true }
