[package]
name = "nova-graph"
description = "GraphRAG knowledge graph engine with Neo4j integration"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nova-core = { path = "../nova-core" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }
base64 = "0.22"
