[package]
name = "nova-translate"
description = "Context-aware translation engine with glossary enforcement"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nova-core = { path = "../nova-core" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
