[package]
name = "nova-worker"
description = "Async task queue worker for Nova Reader"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nova-core = { path = "../nova-core" }
nova-embed = { path = "../nova-embed" }
nova-graph = { path = "../nova-graph" }
nova-ingest = { path = "../nova-ingest" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
async-openai = { workspace = true }
